+ copy-webpack-plugin

--- a/src/about.html
+++ b/src/about.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Test test!</title>
+	<title>About</title>
 </head>
 <body>
-	
-	<div id="test"></div>
-	<img src="images/img.jpg" alt="">
-
+	<h1>About page</h1>
 </body>
 </html>
