--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,163 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Test test!</title>
+	<title>MandarinArt.Ru</title>
 </head>
 <body>
-	
-	<div id="test"></div>
-	<img src="images/img.jpg" alt="">
+
+	<header class="header container">
+
+		<div class="row">
+
+			<ul class="mandarin-menu">
+
+				<li><a href="section1">Преимущества</a></li>
+				<li><a href="section2">Услуги</a></li>
+				<li><a href="section3">Ценности</a></li>
+				<li><a href="section4">Процесс</a></li>
+				<li><a href="section5">Галерея</a></li>
+				<li><a href="section6">Контакты</a></li>
+			</ul>
+		</div>
+	</header>	
+
+	<section id="section1" class="container">
+
+		<div class="row">
+
+			<div class="development">
+				Slider1
+			</div>
+
+		</div>
+	</section>
+
+	<section class="buttons">
+		<div class="container">
+			<div class="row">
+				<button id="button1">НАЧАТЬ</button>
+				<button id="button2">СЕЙЧАС</button>
+			</div>
+		</div>
+	</section>
+
+	<section id="section2" class="container">
+
+		<div class="row">
+
+			<div class="development">
+				section2
+			</div>
+
+		</div>
+	</section>
+
+	<section id="section3" class="container">
+
+		<div class="row">
+
+			<div class="development">
+				section3
+			</div>
+				
+
+		</div>
+	</section>
+
+	<section id="section4" class="container">
+
+		<div class="row">
+
+			<div class="development">
+				section4
+			</div>
+
+
+		</div>
+	</section>
+
+	<section id="section5" class="container">
+
+		<div class="row">
+
+			<div class="development">
+				section5
+			</div>
+
+
+		</div>
+	</section>
+
+	<section id="section6" class="container">
+
+		<div class="row">
+
+
+			<div class="development">
+				section6
+			</div>
+
+
+		</div>
+	</section>
+
+
+	<section id="section7" class="container">
+
+		<div class="row">
+
+
+			<div class="development">
+				section7
+			</div>
+
+
+
+		</div>
+	</section>
+
+	<section id="section8" class="container">
+
+		<div class="row">
+
+
+			<div class="development">
+				section8
+			</div>
+
+
+		</div>
+	</section>
+
+	<section id="section9" class="container">
+
+		<div class="row">
+
+
+			<div class="development">
+				section9
+			</div>
+
+
+
+		</div>
+	</section>
+
+	<section id="section10" class="container">
+
+		<div class="row">
+
+
+			<div class="development">
+				section10
+			</div>
+
+
+
+		</div>
+	</section>
+
+
 
 </body>
 </html>
