Before install slick-slider

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,23 @@
 
 		<div class="row">
 
-			<ul class="mandarin-menu">
+			<div class="logo-block">
+				<img src="images/logo_new_colors.png" alt="" class = "logo-img"/>
+			</div>
+
+			<div class="info-block">
+				
+				<p>Бюро графического дизайна | Сочи</p>
+				<p>+7 983 363 4388 +7 950 984 3678 | web</p>
+
+			</div>
+
+			<div class="slogan-block">
+				
+				<p>Мы понимаем дизайн как процесс визуальной коммуникации человека с окружающим миром...</p>
+			</div>
+
+			<ul class="mandarinart-menu">
 
 				<li><a href="section1">Преимущества</a></li>
 				<li><a href="section2">Услуги</a></li>
