--- a/src/index.html
+++ b/src/index.html
@@ -62,10 +62,39 @@
 
 		<div class="row">
 
-			<div class="development">
-				section2
-			</div>
+			<div id="slick1">
 
+				<div class="items">
+
+
+
+
+					<div class="item">
+
+						<img src="images/logo_new_colors.png" alt="" />
+	
+					</div><!-- <div class="item"> -->
+	
+
+					<div class="item">
+
+						<img src="images/logo_new_colors.png" alt="" />
+	
+					</div><!-- <div class="item"> -->
+	
+	
+
+					<div class="item">
+
+						<img src="images/logo_new_colors.png" alt="" />
+	
+					</div><!-- <div class="item"> -->
+	
+
+
+			</div><!-- <div class="items"> -->
+
+			</div><!-- <div id="slick1"> -->
 		</div>
 	</section>
 
