--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>MandarinArt.Ru</title>
 </head>
+
+<body>
+	
 <div id="display">
 	
 
@@ -11,13 +14,11 @@
 
 	<header class="header">
 
-		<div class="menu container">
+		<nav class="menu container">
 
 			<div class="row">
 
-				<input type="checkbox" id = "menu-toggle">
-
-				<label id="menu-label" for="menu-toggle"></label>
+				<div id="menu-toggle"></div>
 
 				<ul class="menu">
 
@@ -29,8 +30,9 @@
 					<li><a href="section6">Контакты</a></li>
 
 				</ul>
+
 			</div>
-		</div>
+		</nav>
 
 		<div class="logo-info-slogan container">
 
@@ -59,6 +61,14 @@
 		</div>
 	</header>	
 
+<section class="info-block-mobile container">
+	<div class="row">
+		<div class="col">
+			<p>Бюро графического дизайна | Сочи</p>
+			<p>+7 983 363 4388, +7 950 984 3678 | web</p>
+		</div>
+	</div>
+</section>
 
 <!-- <section>
 	<div class="container">
